--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../src/style.css">
         <base href="/" />
         <meta charset="UTF-8">
         <title>Basic React Site
         </title>
-        <!-- <script src="https://unpkg.com/react@latest/dist/react.js"></script>
-        <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
-        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script> -->
     </head>
     <body>
         <div id="root"></div>
